--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
           document.getElementById('progress-album').innerHTML = '';
           document.getElementById('progress-bar-wrapper').innerHTML = '';
           document.getElementById('albums').innerHTML = '<div class="lds-ring"><div></div><div></div><div></div><div></div></div>';
-          const d = await axios.get('http://localhost:4500/api/search', {params: {search: e.target.value}});
+          const d = await axios.get('/api/search', {params: {search: e.target.value}});
           console.log(d);
           document.getElementById('albums').innerHTML = d.data.map(d =>
             `<div class="album" id="album-${d.id}"><span class="album-image-wrapper"><img class="album-image" width="128" height="128" src="https://e-cdns-images.dzcdn.net/images/cover/${d.cover}/128x128-000000-80-0-0.jpg"></span><span class="big">${d.title}</span><br><span class="small">by ${d.artist.name}</span><br><img class="album-download" width="48" height="48" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png"></div>`
@@ -50,7 +50,7 @@
                 console.log(id);
                 document.getElementById('albums').innerHTML = '';
                 document.getElementById('progress-album').innerHTML = '<div class="lds-ring"><div></div><div></div><div></div><div></div></div>';
-                const ws = new WebSocket('ws://localhost:4500/api/album?id=' + id);
+                const ws = new WebSocket('wss://deemix.oat.zone/api/album?id=' + id);
                 ws.onmessage = (m) => {
                   const d = JSON.parse(m.data);
                   console.log(d);
@@ -65,7 +65,7 @@
                     console.log(d.data);
                     coverArt = d.data;
                   } else if (d.key === 'download') {
-                    download('http://localhost:4500' + d.data);
+                    download(d.data);
                   }
                 }
               }
@@ -230,13 +230,7 @@
     <span id="main">
       <input type="search" id="album-search" name="q">
       <div id="progress"><div id="progress-album"></div><div id="progress-bar-wrapper"></div></div>
-      <div id="albums"><div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/6a1d32f0417bb637ab690c6aa140abb5/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">The Risen EP</span><br><span class="small">by Phaseone</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div><br>
-      <div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/7305784fa30507f10c45814cc29acf07/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">Scars EP</span><br><span class="small">by Dirtyphonics</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div><br>
-      <div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/7caad9d265bd66ca9e9ea6bd6b163ac5/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">Touching The Stars</span><br><span class="small">by Phaseone</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div><br>
-      <div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/ded1430ebbecfc33e96a90e67624948e/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">Dreamscape</span><br><span class="small">by Phaseone</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div><br>
-      <div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/c955807762a467505ecd47fd1f93c0e8/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">Crash &amp; Burn</span><br><span class="small">by PhaseOne, Northlane</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div><br>
-      <div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/db4667686d283fe1ac511de6e5a72eb0/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">Double Up EP</span><br><span class="small">by In Hearts Wake</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div><br>
-      <div class="album"><span class="album-image-wrapper"><img class="album-image" src="https://e-cdns-images.dzcdn.net/images/cover/5ebd20c93cb10ca88c56f3ab07ccba10/128x128-000000-80-0-0.jpg" width="128" height="128"></span><span class="big">Dead Line EP</span><br><span class="small">by Phaseone</span><br><img class="album-download" src="https://img.icons8.com/material-sharp/48/000000/download--v1.png" width="48" height="48"></div></div>
+      <div id="albums"></div>
     </span>
   </body>
 </html>
