--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       </div>
     </div>
     <span id="main">
+      <div class="error" id="error"></div>
       <input type="search" id="album-search" name="q">
       <div id="progress"><div id="progress-album"></div><div id="progress-bar-wrapper"></div></div>
       <div id="albums"></div>
