fix mobile zoom

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>deemix.oat.zone</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<script src="https://cdn.jsdelivr.net/npm/axios@0.20.0/dist/axios.min.js"></script>
     <script src="index.js"></script>
     <link href="index.css" rel="stylesheet">
