--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <body>
     <div id="header">
       <div id="header-left">
-        <a href="https://deemix.app" target="_blank" class="big link"><img id="deemix" width="26" height="auto" src="https://deemix.app/assets/img/logo.85a922b8.png"> deemix</a>
+        <a href="https://deemix.app" target="_blank" class="big link"><img id="deemix" width="26" height="auto" src="https://deemix.app/img/logo.png"> deemix</a>
         <a href="https://git.oat.zone/oat/deemix-web-frontend" target="_blank" class="big link"><img id="git" width="26" height="auto" src="https://git-scm.com/images/logos/downloads/Git-Icon-White.png"> git</a>
       </div>
 
